--- a/Resources/Prototypes/Recipes/Lathes/electronics.yml
+++ b/Resources/Prototypes/Recipes/Lathes/electronics.yml
@@ -653,3 +653,12 @@
   materials:
      Steel: 100
      Glass: 900
+
+- type: latheRecipe
+  id: DroneElectronics
+  result: DroneElectronics
+  completetime: 4
+  materials:
+     Steel: 400
+     Glass: 600
+     Gold: 100
