--- a/Resources/Prototypes/Recipes/Lathes/misc.yml
+++ b/Resources/Prototypes/Recipes/Lathes/misc.yml
@@ -92,3 +92,54 @@
   materials:
     Steel: 750
     Plastic: 100
+
+- type: latheRecipe
+  id: BaseRemoteController
+  result: BaseRemoteController
+  completetime: 12
+  materials:
+    Steel: 200
+    Glass: 500
+    Plastic: 500
+
+- type: latheRecipe
+  id: RemoteModuleSignal
+  result: RemoteModuleSignal
+  completetime: 4
+  materials:
+    Steel: 200
+    Plastic: 500
+
+- type: latheRecipe
+  id: RemoteModuleSpeed
+  result: RemoteModuleSpeed
+  completetime: 4
+  materials:
+    Steel: 200
+    Plastic: 500
+
+- type: latheRecipe
+  id: RemoteModuleCamera
+  result: RemoteModuleCamera
+  completetime: 4
+  materials:
+    Steel: 200
+    Plastic: 500
+    Silver: 50
+
+- type: latheRecipe
+  id: RemoteModuleContainer
+  result: RemoteModuleContainer
+  completetime: 4
+  materials:
+    Steel: 200
+    Plastic: 500
+    Silver: 50
+
+- type: latheRecipe
+  id: RemoteModuleDetonation
+  result: RemoteModuleDetonation
+  completetime: 6
+  materials:
+    Steel: 500
+    Plastic: 500
