--- a/Resources/Prototypes/Shaders/shaders.yml
+++ b/Resources/Prototypes/Shaders/shaders.yml
@@ -71,3 +71,8 @@
   id: Stealth
   kind: source
   path: "/Textures/Shaders/stealth.swsl"
+
+- type: shader
+  id: StaticEffect
+  kind: source
+  path: "/Textures/Shaders/static_effect.swsl"
